--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,6 +74,15 @@ html {
       background-color: var(--background-color);
 }
 
+a {
+      text-decoration: none;
+      color: var(--text-color);
+}
+
+a:hover {
+      text-decoration: underline;
+}
+
 /* 
       ==================================================
       3. Tipografía y colores
@@ -101,19 +110,36 @@ label {
       display: block;
       font-weight: bold;
       margin-bottom: 5px;
-  }
-  input {
+}
+
+input {
       width: 100%;
       padding: 10px;
       font-size: 14px;
-      background-color: var(--blue-color);
-      border: 1px solid #ccc;
+      color: white;
+      background-image: linear-gradient( to left, var(--blue-color), var(--red-color));
+      border: 0;
       border-radius: 5px;
-      margin-bottom: 15px;    
+      margin-bottom: 15px;
       box-sizing: border-box;
-  }
-  
-  
+}
+
+input::placeholder {
+      color: rgb(210, 210, 210);
+}
+input[type="submit"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      color: white;
+      background-image: linear-gradient( to top left, var(--darkblue-color), var(--darkred-color));
+      border: 0;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      box-sizing: border-box;
+}
+
+
 /* 
       ==================================================
       5. Layout y estructura
@@ -145,9 +171,11 @@ label {
       font-weight: bold;
       color: white;
 }
+
 #login .alert-danger {
       background-color: var(--red-color);
 }
+
 #login .alert-success {
       background-color: var(--blue-color);
 }
@@ -166,9 +194,7 @@ label {
       width: 100%;
       max-width: 460px;
       padding: 20px;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
+      background-color: var(--background-color);
       box-sizing: border-box;
 }
 
