--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,6 +269,11 @@ input[type="submit"] {
       padding: 12px;
       width: 100%;
 }
+
+#login .borderError {
+      border: 4px solid red;
+}
+
 #login .alert {
       margin-bottom: 10px;
       padding: 10px;
