remate profile.php

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,63 +160,60 @@
 */
 
 
-      /* 4.5 Notificaciones CSS */
-
-      .notification-container {
-            position: fixed;
-            text-align: center;
-            width: 20%;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            flex-direction: column-reverse;
-            gap: 10px;
-            max-width: 300px;
-      }
-
-      /* Notificación */
-      .messenger {
-            padding: 15px;
-            border-radius: 5px;
-            color: white;
-            font-size: 16px;
-            opacity: 1;
-            animation: fadeOut 6s forwards;
-      }
-
-      /* Estilos de notificación */
-      .divNotiError {
-            background-color: #e53935;
-      }
-
-      .divNotiLike {
-            background-color: #4caf50;
-      }
-
-      .divNotiNope {
-            background-color: #fb8c00;
-      }
-
-      .divNotiOther {
-            background-color: #1e88e5;
-      }
-
-      .divNotiSuccess {
-            background-color: green;
-           
-        }
-        
-        .divNotiWarning {
-            background-color: orange;
-           
-        }
-        
-        .divNotiInfo {
-            background-color: blue;
-            
-        }
-        
-
+     /* 4.5 Notificaciones CSS */
+.notification-container {
+      position: fixed;
+      text-align: center;
+      width: 70%;
+      bottom: 30px; /* Ajusta esto para moverlas un poco más arriba */
+      right: 20px;
+      display: flex;
+      flex-direction: column-reverse;
+      gap: 15px; /* Ajuste en el espacio entre notificaciones */
+      max-width: 400px; /* Aumenta el ancho máximo */
+      margin-bottom: 30px;
+  }
+  
+  /* Notificación */
+  .messenger {
+      padding: 15px;
+      border-radius: 10px; /* Aumenta el radio para que sea más redondeado */
+      color: white;
+      font-size: 12px; /* Aumenta el tamaño de la fuente */
+      opacity: 1;
+      animation: fadeOut 6s forwards;
+      box-sizing: border-box; /* Asegura que el padding no afecte el tamaño */
+  }
+  
+  /* Estilos de notificación */
+  .divNotiError {
+      background-color: #e53935;
+  }
+  
+  .divNotiLike {
+      background-color: #4caf50;
+  }
+  
+  .divNotiNope {
+      background-color: #fb8c00;
+  }
+  
+  .divNotiOther {
+      background-color: #1e88e5;
+  }
+  
+  .divNotiSuccess {
+      background-color: green;
+  }
+  
+  .divNotiWarning {
+      background-color: orange;
+  }
+  
+  .divNotiInfo {
+      background-color: blue;
+  }
+  
 
 
 /* 
@@ -269,7 +266,7 @@
      
 
         .title-messenger {
-            margin-bottom: 5px;
+            margin-bottom: 10px;
             font-size: 20px;
         }
 
