--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,7 +250,9 @@
       }
 
       .profile-container {
-
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 100%;
             height: 100%;
             transition: transform 0.3s ease-out;
@@ -273,15 +275,25 @@
       #profile-info {
             position: absolute;
             bottom: 10px;
-            left: 10px;
             color: #fff;
             text-align: center;
             padding: 10px 0;
             border-radius: 10px 10px 0 0;
+            text-align: center;
+      }
+
+      #profile-info p {
+            display: inline-block;
+            text-align: center;
       }
 
       #user-name {
-            font-size: 23px;
+            font-size: 40px;
+            font-weight: bold;
+      }
+
+      #user-age {
+            font-size: 33px;
             font-weight: bold;
       }
 
@@ -342,6 +354,39 @@
 
       .stamp.visible {
             opacity: 1;
+      }
+
+      .slider {
+            position: relative;
+            width: 100%;
+            height: 100%;
+      }
+
+      .profile-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+      }
+
+      .paginator {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+      }
+
+      .dot {
+            height: 10px;
+            width: 10px;
+            margin: 0 5px;
+            background-color: #717171;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+      }
+
+      .dot.active {
+            background-color: #bbb;
       }
 
 /* 
