--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,7 @@
       }
 
       /* 2.3 Estilos base para body y etiquetas */
-      body {
+      /*body {
             margin: 0 auto;
             width: 100%;
             max-width: 460px;
@@ -107,7 +107,7 @@
             border-bottom-left-radius: 30px;
             border-bottom-right-radius: 30px;
             z-index: 9999;
-            width: 100%;/**/
+            width: 100%;
 
       }
 
@@ -136,7 +136,106 @@
             font-weight: bold;
             padding: 10px;
             transition: color 0.3s, transform 0.3s;
+      }*/
+      /*nueva estructura principal*/
+
+      body {
+            margin: 0 auto;
+            width: 100%;
+            max-width: 460px;
+            height: 90vh;
+            min-height: 100vh; /* Asegura que el body ocupe al menos toda la altura de la pantalla */
+        
+            /*max-height: 870px;*/
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 30px;
+            border: 1px solid #ccc;
       }
+
+      header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #f1f1f1;
+            border-bottom: 1px solid #ccc;
+            border-top-left-radius: 30px;
+            border-top-right-radius: 30px;
+            height: 70px;
+      }
+
+      main {
+            height: calc(100% - 70px - 60px);
+            padding: 20px;
+            background-color: #ffffff;
+            overflow: auto; /* Esto asegura que el contenido se desplace cuando sea necesario */
+}
+
+      .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            background-color: #f1f1f1;
+      }
+
+      footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 60px; /* Ajusta la altura del footer */
+            background-color: #f1f1f1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-bottom-left-radius: 30px;
+            border-bottom-right-radius: 30px;
+            z-index: 9999; /* Asegura que el footer esté por encima de otros elementos */
+}
+
+
+      footer nav {
+            width: 100%;
+            max-width: 460px;
+            padding: 0 20px;
+      }
+
+      footer nav ul {
+            display: flex;
+            justify-content: space-around;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+      }
+
+      footer nav ul li {
+            display: inline-block;
+      }
+
+      footer nav ul li a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px;
+            transition: color 0.3s, transform 0.3s;
+      }
+         /* 2.5 Estilos base para Links */
+         a {
+            text-decoration: none;
+            color: inherit;
+      }
+
+      a:hover, a:focus {
+            color: #0056b3;
+      }
+
+
 
       /* 2.5 Estilos base para Links */
       a {
@@ -164,7 +263,7 @@
 .notification-container {
       position: fixed;
       text-align: center;
-      width: 70%;
+      width:60%;
       bottom: 30px; /* Ajusta esto para moverlas un poco más arriba */
       right: 20px;
       display: flex;
