--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -866,6 +866,7 @@
             flex-direction: column;
             margin-top: 20px;
             height: 405px;
+            width: 430px;
             overflow-y: hidden;
             scrollbar-width: thin;
             scrollbar-color: #888 #f5f5f5;
