--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -898,13 +898,11 @@
             cursor: pointer;
       }
 
-      /* Efecto al pasar el mouse sobre la conversación */
       .conversation-item:hover {
             background-color: #f9f9f9;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
       }
 
-      /* Estilo para la foto de perfil */
       .contenedor-foto-conversation {
             width: 60px;
             height: 60px;
@@ -913,19 +911,16 @@
             overflow: hidden;
       }
 
-      /* Foto de perfil */
       .contenedor-foto-conversation img {
             width: 100%;
             height: 100%;
             object-fit: cover;
       }
 
-      /* Detalles de la conversación */
       .conversation-details {
             flex: 1;
       }
 
-      /* Nombre del usuario */
       .conversation-name {
             font-weight: bold;
             font-size: 20px;
@@ -933,7 +928,6 @@
             margin-bottom: 5px;
       }
 
-      /* Último mensaje */
       .last-message {
             font-size: 16px;
             color: #555;
@@ -941,6 +935,194 @@
             white-space: nowrap;
       }
 
+      /* Chat en tiempo real */
+      #chat-container {
+            height: 530px;
+            overflow-y: scroll;
+            scrollbar-width: thin;
+            scrollbar-color: #888 #ffffff;
+            scroll-behavior: smooth;
+      }
+
+      .message-item {
+            display: flex;
+            align-items: center;
+            margin: 10px 0;
+      }
+
+      .message-photo {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin: 0 10px;
+            object-fit: cover;
+      }
+
+      .message-text {
+            padding: 10px;
+            border-radius: 10px;
+            max-width: 60%;
+            margin-right: 10px;
+            font-size: 16px;
+      }
+
+      .message-sender {
+            display: flex;
+            justify-content: flex-end;
+      }
+      .message-sender .message-text {
+            background-color: #DCF8C6;
+            color: #000;
+      }
+      
+      .message-receiver .message-text {
+            background-color: #FFF;
+            color: #000;
+            border: 1px solid #DDD;
+      }
+
+      .message-divider {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 14px;
+            color: #888;
+      }
+
+      #message-input {
+            width: calc(100% - 100px); 
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-top: 10px;
+            margin-right: 10px;
+            box-sizing: border-box;
+            font-size: 16px;
+      }
+
+      #message-input:focus {
+            border-color: var(--a-focus-color);
+            outline: none;
+      }
+
+      #message-button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: var(--secondary-color);
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            font-size: 16px;
+      }
+
+      #message-button:hover {
+            background-color: var(--a-focus-color);
+      }
+
+      #message-button:focus {
+            outline: none;
+            background-color: var(--a-focus-color);
+      }
+
+      /* Mensajes header */
+      #usermessages-header {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+      }
+
+      #usermessages-header button {
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            margin-right: 10px;
+      }
+
+      #usermessages-header button:hover {
+            color: var(--a-focus-color);
+      }
+
+      #usermessages-header img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
+            object-fit: cover;
+      }
+
+      #usermessages-header span {
+            font-size: 18px;
+            font-weight: bold;
+      }
+
+      #usermessages-header-goback {
+            background-color: transparent;
+            border: none;
+            color: rgb(0, 0, 0);
+            font-size: 16px;
+            cursor: pointer;
+            margin-right: 10px;
+            display: flex;
+            align-items: center;
+            transition: color 0.3s ease;
+      }
+
+      #usermessages-header-goback img {
+            width: 24px;
+            height: auto;
+      }
+
+      #usermessages-container .tabs {
+            display: flex;
+            justify-content: center;
+            gap: 60px;
+            padding: 10px;
+      }
+
+      #usermessages-container .tabs button {
+            background-color: #DCF8C6;;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            transition: color 0.3s ease;
+            padding: 10px;
+            border-radius: 10px;
+      }
+
+      #usermessages-container .tabs button:hover {
+            color: var(--a-focus-color);
+      }
+
+      #usermessages-container .tab-content {
+            flex: 1;
+            padding: 10px;
+            overflow-y: auto;
+      }
+
+      /* Messages - Profile */
+      .message-profileImage {
+            width: 100%;
+            height: 530px;
+            object-fit: cover;
+
+      }
+
+      #message-profile-info {
+            position: absolute;
+            bottom: 130px;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-radius: 10px 10px 0 0;
+            text-align: center;
+      }
+
+      #message-profile-info p {
+            display: inline-block;
+            text-align: center;
+      }
 
 /* 
       ==================================================
