Mochila - Editar perfil

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,11 +93,53 @@
             border-top-right-radius: 30px;
             height: 70px;
             color: #fff;
+            position: relative;
       }
 
       header img {
             width: 180px;
             height: auto;
+      }
+
+      .dropdown {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+      }
+
+      .dropbtn {
+            background-color: transparent;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            margin-right: 20px;
+            margin-top: 5px;
+            
+      }
+
+      .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: #f9f9f9;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+      }
+
+      .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+      }
+
+      .dropdown-content a:hover {
+            background-color: #f1f1f1;
+      }
+
+      .dropdown:hover .dropdown-content {
+            display: block;
       }
 
       main {
@@ -466,7 +508,6 @@
             /* cursor: grab; */
             background: white;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             transform-origin: center;
       }
 
@@ -704,15 +745,24 @@
             width: 100%;
       }
 
+      .profile-showImage {
+            width: 398.75px;
+            height: 530px;
+            object-fit: cover;
+            display: block;
+            margin: 0 auto;
+      }
+
       .profile-image {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
       }
+
       /* Form */
       .profile-form {
-            margin-top: 30px;
+            margin-top: 50px;
             display: flex;
             flex-direction: column;
             gap: 15px;
@@ -735,6 +785,17 @@
       .profile-form input[type="text"],
       .profile-form input[type="date"],
       .profile-form input[type="password"] {
+            padding: 8px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            width: 100%;
+            max-width: 300px;
+            box-sizing: border-box;
+            font-size: 16px;
+      }
+
+      .profile-form select {
             padding: 8px;
             font-size: 14px;
             border: 1px solid #ccc;
@@ -801,6 +862,46 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
 
+      /* Profile - Mostrar */
+      #mostrar {
+            margin-top: 50px;
+      }
+      #profile-showInfo {
+            position: absolute;
+            bottom: 170px;
+            width: 100%;
+            text-align: center;
+            color: #fff;
+            padding: 10px 0;
+      }
+
+      #profile-showInfo p {
+            margin: 0;
+      }
+
+      #profile-showInfo .paginator {
+            margin-top: 10px;
+      }
+
+      .paginator {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+      }
+
+      .dot {
+            height: 10px;
+            width: 10px;
+            margin: 0 5px;
+            background-color: #717171;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+      }
+
+      .dot.active {
+            background-color: #bbb;
+      }
 
       /* 6.4 Mensajes */
 
@@ -1074,24 +1175,25 @@
             height: auto;
       }
 
-      #usermessages-container .tabs {
+      .tabs {
             display: flex;
             justify-content: center;
             gap: 60px;
-            padding: 10px;
+            border-bottom: 1px solid #156eda;
       }
 
-      #usermessages-container .tabs button {
-            background-color: #DCF8C6;;
-            border: none;
+      .tabs button {
             font-size: 16px;
             cursor: pointer;
             transition: color 0.3s ease;
             padding: 10px;
-            border-radius: 10px;
+            border: none;
+            background-color: transparent;
+            border: 1px solid #156eda;
+            border-bottom: none;
       }
 
-      #usermessages-container .tabs button:hover {
+      .tabs button:hover {
             color: var(--a-focus-color);
       }
 
@@ -1192,3 +1294,32 @@
       - Desktop
       - Large screens
 */
+
+      /* Mobile */
+      @media (max-width: 600px) {
+            
+            body {
+                  width: 100vw;
+                  height: 100vh;
+                  border-radius: 0;
+                  border: none;
+            }
+
+            header {
+                  padding: 2vh;
+                  height: 8vh;
+            }
+
+            header img {
+                  width: 40vw;
+            }
+
+            main {
+                  padding: 2vh;
+            }
+
+            footer {
+                  height: 8vh;
+            }
+
+      }
