--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1571,9 +1571,11 @@ to {
 .message-text {
       padding: 10px;
       border-radius: 10px;
-      max-width: 60%;
+      max-width: 230px;
       margin-right: 10px;
       font-size: 16px;
+      word-wrap: break-word;
+      white-space: normal;
 }
 
 .message-sender {
