Arreglar ubicación de filtro

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -898,41 +898,13 @@ input[type="range"]::-moz-range-thumb {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 6px 12px;
       gap: 8px;
-      margin-top: 20px;
       height: 36px;
-      width: 120px;
+      width: 100%;
       border: none;
-      background: #5e41de33;
-      border-radius: 20px;
       cursor: pointer;
-}
-
-.filtroButton-label {
-      line-height: 20px;
-      font-size: 17px;
-      color: #5D41DE;
-      font-family: sans-serif;
-      letter-spacing: 1px;
-}
-
-.filtroButton:hover {
-      background: #5e41de4d;
-}
-
-.filtroButton:hover .svg-icon {
-      animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-      0% {
-            transform: rotate(0deg);
-      }
-
-      100% {
-            transform: rotate(360deg);
-      }
+      background: none;
+      font-size: 16px;
 }
 
 /* Error Message */
